Headshot spacing fix

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 <div class="container">
     <div class="row meet-the-band-1">
       <div class="col-md-4 headshots-copy">
-        <h1>MEET THE BAND</h1>
+        <h1 class="band-header">MEET THE BAND</h1>
         <ul class="band-bullets">
           <li>Joseph Terrell, Guitar & Vocals</li>
           <li>Libby Rodenbough, Fiddle & Vocals</li>
@@ -84,10 +84,10 @@
           <li>Wood Robinson, Bass & Vocals</li>
         </ul>
       </div>
-      <div class="col-md-4 headshot-row1">
+      <div class="col-md-8 headshot-row1">
         <img class="joe" src="assets/images/about/joseph-terrell.jpg" alt="Joseph Terrell, Guitar & Vocals, Mipso Band">
-      </div>
-      <div class="col-md-4 headshot-row1">
+      <!-- </div>
+      <div class="col-md-4 headshot-row1"> -->
         <img class="libby" src="assets/images/about/libby-rodenbough.jpg" alt="Libby Rodenbough, Fiddle & Vocals, Mipso Band">
       </div>
     </div>
@@ -97,10 +97,10 @@
     <div class="row meet-the-band-2">
       <div class="col-md-4 headshot-row2-filler">
       </div>
-      <div class="col-md-4 headshot-row2">
+      <div class="col-md-8 headshot-row2">
         <img class="jacob" src="assets/images/about/jacob-sharp.jpg" alt="Jacob Sharp, Mandolin & Vocals, Mipso Band">
-      </div>
-      <div class="col-md-4 headshot-row2">
+      <!-- </div>
+      <div class="col-md-4 headshot-row2"> -->
         <img class="wood" src="assets/images/about/wood-robinson.jpg" alt="Wood Robinson, Bass & Vocals, Mipso Band">
       </div>
     </div>
