--- a/tour-dates.html
+++ b/tour-dates.html
@@ -45,12 +45,12 @@
      <th class="date"><h1>DATE</h1></th>
      <th><h1>VENUE</h1></th>
      <th><h1>LOCATION</h1></th>
-     <th><h1>BUY TICKETS</h1></th>
+     <th class="buy-tickets"><h1>BUY TICKETS</h1></th>
    </tr>
 
   <tr class="table-content">
     <td class="date">10/5 FRI</td>
-    <td><a href="https://www.theburlky.com/" target="_blank">THE BURL</a> <br /> with Melanie Brulee, Ryvoli</td>
+    <td><a class="venue" href="https://www.theburlky.com/" target="_blank">THE BURL</a> <br /> with Melanie Brulee, Ryvoli</td>
     <td>LEXINGTON, KY</td>
     <td class="buy-now">
       <a href="https://www.bandsintown.com/en/e/100247573-mipso-at-the-burl" target="_blank">
@@ -61,7 +61,7 @@
 
   <tr class="table-content">
     <td class="date">10/6 SAT</td>
-    <td><a href="http://www.3sistersbluegrass.com/" target="_blank">3 SISTERS BLUEGRASS <br />FESTIVAL</a></td>
+    <td class="venue"><a href="http://www.3sistersbluegrass.com/" target="_blank">3 SISTERS BLUEGRASS <br />FESTIVAL</a></td>
     <td>CHATTANOOGA, TN</td>
     <td class="buy-now">
       <a href="http://www.3sistersbluegrass.com/new-page/" target="_blank">
@@ -72,7 +72,7 @@
 
   <tr class="table-content">
     <td class="date">10/10 WED</td>
-    <td><a href="https://acm.uco.edu/" target="_blank">THE ACM @ UCO <br /> </a> with Jason Scott</td>
+    <td><a class="venue" href="https://acm.uco.edu/" target="_blank">THE ACM @ UCO <br /> </a> with Jason Scott</td>
     <td>OKLAHOMA CITY, OK</td>
     <td class="buy-now">
       <a href="https://www.songkick.com/venues/1128541-acmuco-performance-lab" target="_blank">
@@ -82,7 +82,7 @@
 
   <tr class="table-content">
     <td class="date">10/11 THU </td>
-    <td><a href="https://www.barleycornswichita.com/" target="_blank"> BARLEYCORN'S</a><br /> with Jason Scott</td>
+    <td><a class="venue" href="https://www.barleycornswichita.com/" target="_blank"> BARLEYCORN'S</a><br /> with Jason Scott</td>
     <td>WICHITA, KS</td>
     <td class="buy-now">
       <a href="https://www.ticketfly.com/event/1751246-mipso-wichita/" target="_blank">
@@ -92,7 +92,7 @@
 
   <tr class="table-content">
     <td class="date">10/12 FRI </td>
-    <td><a href="http://ivywildschool.com/" target="_blank">IVYWILD SCHOOL</a><br /> with Mike Clark</td>
+    <td><a class="venue" href="http://ivywildschool.com/" target="_blank">IVYWILD SCHOOL</a><br /> with Mike Clark</td>
     <td>COLORADO SPRINGS, CO</td>
     <td class="buy-now">
       <a href="https://www.eventbrite.com/e/mipso-and-mike-clark-tickets-50537104841" target="_blank">
@@ -102,7 +102,7 @@
 
   <tr class="table-content">
     <td class="date">10/13 SAT </td>
-    <td><a href="https://www.bluebirdtheater.net/" target="_blank">BLUEBIRD THEATER</a><br /> with Whippoorwill</td>
+    <td><a class="venue" href="https://www.bluebirdtheater.net/" target="_blank">BLUEBIRD THEATER</a><br /> with Whippoorwill</td>
     <td>DENVER, CO</td>
     <td class="buy-now">
       <a href="https://www.westword.com/event/mipso-10638155" target="_blank">
@@ -113,7 +113,7 @@
 
   <tr class="table-content">
     <td>10/21 SUN </td>
-    <td><a href="https://usnwc.org/relax/festivals/outdoor-market/" target="_blank">OUTDOOR MARKET: US NAT<br /> WHITEWATER CENTER</a></td>
+    <td class="venue"><a href="https://usnwc.org/relax/festivals/outdoor-market/" target="_blank">OUTDOOR MARKET: US NAT<br /> WHITEWATER CENTER</a></td>
     <td>CHARLOTTE, NC</td>
     <td class="buy-now">
       <a href="https://www.bandsintown.com/e/100334841-mipso-at-outdoor-market-us-national-whitewater-center" target="_blank">
@@ -124,7 +124,7 @@
 
   <tr class="table-content">
     <td class="date">10/26 FRI </td>
-    <td><a href="http://www.mideastoffers.com/" target="_blank">MIDDLE EAST DOWNSTAIRS</a><br /> with Sam Lewis Tunes</td>
+    <td><a class="venue" href="http://www.mideastoffers.com/" target="_blank">MIDDLE EAST DOWNSTAIRS</a><br /> with Sam Lewis Tunes</td>
     <td>CAMBRIDGE, MA</td>
     <td class="buy-now">
       <a href="https://www.ticketweb.com/event/mipso-sam-lewis-middle-east-downstairs-tickets/8634895" target="_blank">
@@ -135,7 +135,7 @@
 
   <tr class="table-content">
     <td class="date">10/27 SAT </td>
-    <td><a href="https://www.billsvillehouseconcerts.com/" target="_blank">BILLSVILLE HOUSE<br /> CONCERTS</a></td>
+    <td><a class="venue" href="https://www.billsvillehouseconcerts.com/" target="_blank">BILLSVILLE HOUSE<br /> CONCERTS</a></td>
     <td>MANCHESTER, VT</td>
     <td class="buy-now">
       <a href="https://www.stubhub.com/mipso-tickets/performer/724513/" target="_blank">
@@ -146,7 +146,7 @@
 
   <tr class="table-content">
     <td class="date">10/28 SUN </td>
-    <td><a href="http://www.mercuryeastpresents.com/boweryballroom" target="_blank">THE BOWERY BALLROOM</a><br /> with Sam Lewis Tunes</td>
+    <td><a class="venue" href="http://www.mercuryeastpresents.com/boweryballroom" target="_blank">THE BOWERY BALLROOM</a><br /> with Sam Lewis Tunes</td>
     <td>NEW YORK, NY</td>
     <td class="buy-now">
       <a href="https://www.ticketfly.com/event/1748490-mipso-new-york/" target="_blank">
@@ -157,7 +157,7 @@
 
   <tr class="table-content">
     <td class="date">10/30 TUE </td>
-    <td><a href="https://casadelpopolo.com/en/la-vitrola/" target="_blank">LA VITROLA</a></td>
+    <td><a class="venue" href="https://casadelpopolo.com/en/la-vitrola/" target="_blank">LA VITROLA</a></td>
     <td>MONTREAL, CANADA</td>
     <td class="buy-now">
       <a href="https://www.songkick.com/concerts/35031909-mipso-at-la-vitrola" target="_blank">
@@ -168,7 +168,7 @@
 
   <tr class="table-content">
     <td class="date">11/1 THU </td>
-    <td><a href="https://www.portlandhouseofmusic.com" target="_blank">PORTLAND HOUSE OF MUSIC</a><br /> with 10 String Symphony</td>
+    <td><a class="venue" href="https://www.portlandhouseofmusic.com" target="_blank">PORTLAND HOUSE OF MUSIC</a><br /> with 10 String Symphony</td>
     <td>PORTLAND, ME</td>
     <td class="buy-now">
       <a href="https://www.portlandhouseofmusic.com/event/mipso/" target="_blank">
@@ -179,7 +179,7 @@
 
   <tr class="table-content">
     <td class="date">11/2 FRI </td>
-    <td><a href="https://fairfieldtheatre.org/stageone" target="_blank">STAGEONE</a><br /> with Dan Millsy</td>
+    <td><a class="venue" href="https://fairfieldtheatre.org/stageone" target="_blank">STAGEONE</a><br /> with Dan Millsy</td>
     <td>FAIRFIELD, CT</td>
     <td class="buy-now">
       <a href="https://www.songkick.com/concerts/35308129-mipso-at-ftc-stageone" target="_blank">
