Merch Filter Work

--- a/merch.html
+++ b/merch.html
@@ -46,10 +46,10 @@
 
 <!-- Filter Control Buttons -->
   <div id="myBtnContainer">
-        <button class="btn active" onclick="filterSelection('all')"> <h1>SHOP ALL</h1></button>
-        <button class="btn" onclick="filterSelection('tshirts')"> <h1>TSHIRTS</h1></button>
-        <button class="btn" onclick="filterSelection('posters')"> <h1>POSTERS</h1></button>
-        <button class="btn" onclick="filterSelection('accessories')"> <h1>ACCESSORIES</h1></button>
+        <button class="btn active" onclick="filterSelection('all')"> <h2 class=merch-header>SHOP ALL</h2></button>
+        <button class="btn" onclick="filterSelection('tshirts')"> <h2 class=merch-header>TSHIRTS</h2></button>
+        <button class="btn" onclick="filterSelection('posters')"> <h2 class=merch-header>POSTERS</h2></button>
+        <button class="btn" onclick="filterSelection('accessories')"> <h2 class=merch-header>ACCESSORIES</h2></button>
   </div>
 
 <!-- The filterable elements - MERCHANDISE PHOTOS -->
