Table fixing & filter fixes

--- a/merch.html
+++ b/merch.html
@@ -54,20 +54,22 @@
 
 <!-- The filterable elements - MERCHANDISE PHOTOS -->
   <div class="container">
-    <div class="filterDiv tshirts"><img src="./assets/images/merch/tshirt-1.jpg" /></div>
-    <div class="filterDiv tshirts"><img src="./assets/images/merch/tshirt-2.jpg" /></div>
-    <div class="filterDiv tshirts"><img src="./assets/images/merch/tshirt-3.jpg" /></div>
-    <div class="filterDiv tshirts"><img src="./assets/images/merch/tshirt-4.jpg" /></div>
-    <div class="filterDiv tshirts"><img src="./assets/images/merch/tshirt-5.jpg" /></div>
-    <div class="filterDiv posters"><img src="./assets/images/merch/poster-1.jpg" /></div>
-    <div class="filterDiv posters"><img src="./assets/images/merch/poster-2.jpg" /></div>
-    <div class="filterDiv posters"><img src="./assets/images/merch/poster-3.jpg" /></div>
-    <div class="filterDiv posters"><img src="./assets/images/merch/poster-4.jpg" /></div>
-    <div class="filterDiv posters"><img src="./assets/images/merch/poster-5.jpg" /></div>
-    <div class="filterDiv accessories"><img src="./assets/images/merch/accessories-1.jpg" /></div>
-    <div class="filterDiv accessories"><img src="./assets/images/merch/accessories-2.jpg" /></div>
-    <div class="filterDiv accessories"><img src="./assets/images/merch/accessories-3.jpg" /></div>
-    <div class="filterDiv accessories"><img src="./assets/images/merch/accessories-4.jpg" /></div>
+    <div class="merch-container">
+      <div class="filterDiv tshirts"><img src="./assets/images/merch/tshirt-1.jpg" /></div>
+      <div class="filterDiv tshirts"><img src="./assets/images/merch/tshirt-2.jpg" /></div>
+      <div class="filterDiv tshirts"><img src="./assets/images/merch/tshirt-3.jpg" /></div>
+      <div class="filterDiv tshirts"><img src="./assets/images/merch/tshirt-4.jpg" /></div>
+      <div class="filterDiv tshirts"><img src="./assets/images/merch/tshirt-5.jpg" /></div>
+      <div class="filterDiv posters"><img src="./assets/images/merch/poster-1.jpg" /></div>
+      <div class="filterDiv posters"><img src="./assets/images/merch/poster-2.jpg" /></div>
+      <div class="filterDiv posters"><img src="./assets/images/merch/poster-3.jpg" /></div>
+      <div class="filterDiv posters"><img src="./assets/images/merch/poster-4.jpg" /></div>
+      <div class="filterDiv posters"><img src="./assets/images/merch/poster-5.jpg" /></div>
+      <div class="filterDiv accessories"><img src="./assets/images/merch/accessories-1.jpg" /></div>
+      <div class="filterDiv accessories"><img src="./assets/images/merch/accessories-2.jpg" /></div>
+      <div class="filterDiv accessories"><img src="./assets/images/merch/accessories-3.jpg" /></div>
+      <div class="filterDiv accessories"><img src="./assets/images/merch/accessories-4.jpg" /></div>
+    </div>
   </div>
 
 
