--- a/tour-dates.html
+++ b/tour-dates.html
@@ -40,6 +40,7 @@
     </div>
   </div>
 
+<div class="content-container">
 <table>
    <tr class="table-headers">
      <th class="date"><h1>DATE</h1></th>
@@ -193,7 +194,7 @@
 <div class="tour-dates-announced-box">
   <p>MORE TOUR DATES <br /> TO BE ANNOUNCED</p>
 </div>
-
+</div>
 
 <script src="./assets/javascripts/bootstrap.min.js"></script>
 </body>
