Nav effects & Insta card effects

--- a/tour-dates.html
+++ b/tour-dates.html
@@ -32,7 +32,7 @@
             <li><a href="media.html">MEDIA</a></li>
             <li><a href="discography.html">DISCOGRAPHY</a></li>
             <li><a href="merch.html">SHOP</a></li>
-            <li><a href="tour-dates.html">ON TOUR</a></li>
+            <li><a class="current-page" href="tour-dates.html">ON TOUR</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
