--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="about.html">ABOUT</a></li>
+            <li><a class="current-page" href="about.html">ABOUT</a></li>
             <li><a href="media.html">MEDIA</a></li>
             <li><a href="discography.html">DISCOGRAPHY</a></li>
             <li><a href="merch.html">SHOP</a></li>
