--- a/discography.html
+++ b/discography.html
@@ -31,7 +31,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="media.html">MEDIA</a></li>
-            <li><a href="discography.html">DISCOGRAPHY</a></li>
+            <li><a class="current-page" href="discography.html">DISCOGRAPHY</a></li>
             <li><a href="merch.html">SHOP</a></li>
             <li><a href="tour-dates.html">ON TOUR</a></li>
           </ul>
