--- a/media.html
+++ b/media.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="about.html">ABOUT</a></li>
-            <li><a href="media.html">MEDIA</a></li>
+            <li><a class="current-page" href="media.html">MEDIA</a></li>
             <li><a href="discography.html">DISCOGRAPHY</a></li>
             <li><a href="merch.html">SHOP</a></li>
             <li><a href="tour-dates.html">ON TOUR</a></li>
@@ -85,25 +85,25 @@
         <!--Instagram Photo 1 -->
           <div class="row">
             <div class="col-xs-12 col-sm-3">
-              <a href="./assets/images/media-page/lightbox/insta-1.jpg" data-lightbox="mipso-instagram" data-title="Wood practicing before tonight's show in Asheville">
+              <a class="insta-card" href="./assets/images/media-page/lightbox/insta-1.jpg" data-lightbox="mipso-instagram" data-title="Wood practicing before tonight's show in Asheville">
               <img src="./assets/images/media-page/lightbox/thumbnail-1.png" />
               </a>
             </div>
         <!--Instagram Photo 2 -->
             <div class="col-xs-12 col-sm-3">
-              <a href="./assets/images/media-page/lightbox/insta-2.jpg" data-lightbox="mipso-instagram" data-title="Our biggest fan in Denver this weekend">
+              <a class="insta-card" href="./assets/images/media-page/lightbox/insta-2.jpg" data-lightbox="mipso-instagram" data-title="Our biggest fan in Denver this weekend">
               <img src="./assets/images/media-page/lightbox/thumbnail-2.png" />
               </a>
             </div>
         <!--Instagram Photo 3 -->
             <div class="col-xs-12 col-sm-3">
-              <a href="./assets/images/media-page/lightbox/insta-3.jpg" data-lightbox="mipso-instagram" data-title="Libby gets a bathroom mirror shot in every city we tour in">
+              <a class="insta-card" href="./assets/images/media-page/lightbox/insta-3.jpg" data-lightbox="mipso-instagram" data-title="Libby gets a bathroom mirror shot in every city we tour in">
               <img src="./assets/images/media-page/lightbox/thumbnail-3.png" />
               </a>
             </div>
         <!--Instagram Photo 4 -->
             <div class="col-xs-12 col-sm-3">
-              <a href="./assets/images/media-page/lightbox/insta-4.jpg" data-lightbox="mipso-instagram" data-title="Band practice self portrait">
+              <a class="insta-card" href="./assets/images/media-page/lightbox/insta-4.jpg" data-lightbox="mipso-instagram" data-title="Band practice self portrait">
               <img src="./assets/images/media-page/lightbox/thumbnail-4.png" />
               </a>
             </div>
@@ -111,25 +111,25 @@
         <!--Instagram Photo 5 -->
         <div class="row instagram">
             <div class="col-xs-12 col-sm-3">
-              <a href="./assets/images/media-page/lightbox/insta-5.jpg" data-lightbox="mipso-instagram" data-title="Happy birthday to us!">
+              <a class="insta-card" href="./assets/images/media-page/lightbox/insta-5.jpg" data-lightbox="mipso-instagram" data-title="Happy birthday to us!">
               <img src="./assets/images/media-page/lightbox/thumbnail-5.png" />
               </a>
             </div>
         <!--Instagram Photo 6 -->
             <div class="col-xs-12 col-sm-3">
-              <a href="./assets/images/media-page/lightbox/insta-6.jpg" data-lightbox="mipso-instagram" data-title="Beautiful night to wrap up our Rocky Mt. Tour!">
+              <a class="insta-card" href="./assets/images/media-page/lightbox/insta-6.jpg" data-lightbox="mipso-instagram" data-title="Beautiful night to wrap up our Rocky Mt. Tour!">
                 <img src="./assets/images/media-page/lightbox/thumbnail-6.png" />
               </a>
             </div>
         <!--Instagram Photo 7 -->
             <div class="col-xs-12 col-sm-3">
-              <a href="./assets/images/media-page/lightbox/insta-7.jpg" data-lightbox="mipso-instagram" data-title="Look mama, we've made it.">
+              <a class="insta-card" href="./assets/images/media-page/lightbox/insta-7.jpg" data-lightbox="mipso-instagram" data-title="Look mama, we've made it.">
                 <img src="./assets/images/media-page/lightbox/thumbnail-7.png" />
               </a>
             </div>
         <!--Instagram Photo 8 -->
             <div class="col-xs-12 col-sm-3">
-                <a href="./assets/images/media-page/lightbox/insta-8.jpg" data-lightbox="mipso-instagram" data-title="Vermont in August is the place to be.">
+                <a class="insta-card" href="./assets/images/media-page/lightbox/insta-8.jpg" data-lightbox="mipso-instagram" data-title="Vermont in August is the place to be.">
                   <img src="./assets/images/media-page/lightbox/thumbnail-8.png" />
                 </a>
             </div>
@@ -137,25 +137,25 @@
         <!--Instagram Photo 9 -->
         <div class="row instagram lower">
             <div class="col-xs-12 col-sm-3">
-              <a href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="mipso-instagram" data-title="Headed to Dierks Bentley‘s Seven Peaks Fest in Colorado. So far we have fond feelings for Dierks. Plus he understands what it’s like to have a weird band name.">
+              <a class="insta-card" href="./assets/images/media-page/lightbox/insta-9.jpg" data-lightbox="mipso-instagram" data-title="Headed to Dierks Bentley‘s Seven Peaks Fest in Colorado. So far we have fond feelings for Dierks. Plus he understands what it’s like to have a weird band name.">
                 <img src="./assets/images/media-page/lightbox/thumbnail-9.png" />
               </a>
             </div>
         <!--Instagram Photo 10 -->
             <div class="col-xs-12 col-sm-3">
-              <a href="./assets/images/media-page/lightbox/insta-10.jpg" data-lightbox="mipso-instagram" data-title="It's 97 degrees in Salt Lake City. We're ready to unload this wagon!">
+              <a class="insta-card" href="./assets/images/media-page/lightbox/insta-10.jpg" data-lightbox="mipso-instagram" data-title="It's 97 degrees in Salt Lake City. We're ready to unload this wagon!">
                 <img src="./assets/images/media-page/lightbox/thumbnail-10.png" />
               </a>
             </div>
         <!--Instagram Photo 11 -->
             <div class="col-xs-12 col-sm-3">
-              <a href="./assets/images/media-page/lightbox/insta-11.jpg" data-lightbox="mipso-instagram" data-title="Chicago didn't disappoint - and it never does!">
+              <a class="insta-card" href="./assets/images/media-page/lightbox/insta-11.jpg" data-lightbox="mipso-instagram" data-title="Chicago didn't disappoint - and it never does!">
                 <img src="./assets/images/media-page/lightbox/thumbnail-11.png" />
               </a>
             </div>
         <!--Instagram Photo 12 -->
             <div class="col-xs-12 col-sm-3">
-              <a href="./assets/images/media-page/lightbox/insta-12.jpg" data-lightbox="mipso-instagram" data-title="Come hang out with us in Brooklyn">
+              <a class="insta-card" href="./assets/images/media-page/lightbox/insta-12.jpg" data-lightbox="mipso-instagram" data-title="Come hang out with us in Brooklyn">
                 <img src="./assets/images/media-page/lightbox/thumbnail-12.png" />
               </a>
             </div>
