--- a/merch.html
+++ b/merch.html
@@ -32,7 +32,7 @@
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="media.html">MEDIA</a></li>
             <li><a href="discography.html">DISCOGRAPHY</a></li>
-            <li><a href="merch.html">SHOP</a></li>
+            <li><a class="current-page" href="merch.html">SHOP</a></li>
             <li><a href="tour-dates.html">ON TOUR</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
