--- a/discography.html
+++ b/discography.html
@@ -239,9 +239,11 @@
 
 
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="./assets/javascripts/bootstrap.min.js"></script>
   <script src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
+  <script src="./assets/javascripts/lightbox.min.js"></script>
 </body>
 </html>
