fixing table styling

--- a/tour-dates.html
+++ b/tour-dates.html
@@ -44,9 +44,9 @@
 <table>
    <tr class="table-headers">
      <th class="date"><h1>DATE</h1></th>
-     <th><h1>VENUE</h1></th>
+     <th><h1 class="venue-spacing">VENUE</h1></th>
      <th><h1>LOCATION</h1></th>
-     <th class="buy-tickets"><h1>BUY TICKETS</h1></th>
+     <th><h1 class="buy-tickets">BUY TICKETS</h1></th>
    </tr>
 
   <tr class="table-content">
