--- a/tour-dates.html
+++ b/tour-dates.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html language="en">
 <head>
-  <title>Mipso Tour Dates</title>
+  <title>Mipso On Tour</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="./assets/stylesheets/stylesheet.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet" />
